--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,7 +28,7 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbarStyle="insideInset">
+                android:scrollbarStyle="outsideInset">
 
                 <LinearLayout
                     android:layout_width="match_parent"
